# ohos-native-build

./: .gitignore  LICENSE  README.md
scripts/all/: build.py
scripts/dav1d/: build.py
scripts/ffmpeg/: build.py
scripts/ffmpeg-tg/: build.py
scripts/libavif/: build.py
scripts/libde265/: build.py
scripts/libheif/: build.py
scripts/libjxl/: build.py
scripts/libvpx/: build.py  libvpx_oh_pkg.patch
scripts/libwebp/: build.py
scripts/libyuv/: build.py
scripts/mozjpeg/: build.py
scripts/msys64/: build.py
scripts/openh264/: build.py
scripts/openssl/: build.py
scripts/openssl_1_0_2/: build.py
scripts/openssl_1_1_1/: build.py
scripts/opus/: build.py
scripts/tdnapi/: 0001-Add-tdnapi-example-for-HarmonyOS.patch  build.py
scripts/tdnapi/cpp/: CMakeLists.txt  td_napi.cpp
scripts/tdnapi/cpp/types/libtdnapi/: Index.d.ts  oh-package.json5
scripts/tdnapi/src/: build-profile.json5  hvigorfile.ts
scripts/tdnapi/src/main/cpp/: CMakeLists.txt  td_napi.cpp
scripts/tdnapi/src/main/cpp/types/libtdnapi/: Index.d.ts  oh-package.json5
scripts/tdnapi/src/src/main/cpp/: CMakeLists.txt  td_napi.cpp  td_work.h
scripts/tdnapi/src/src/main/cpp/types/libtdnapi/: Index.d.ts  oh-package.json5
scripts/zlib/: build.py
